k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data # Designates where inside a container this storage should be available. Everything stored in this path inside a container will be stored on the volume.
              subPath: postgres # Path to the folder where the mounted data will be stored on the volume. Using the root path of / is not recommended. as the persistent volumes provieded by cloud provisioners might not be empty and will cause Postgres to panic.
