k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # Build the ingess controller based on the Nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # Configure how a copy of Nginx behaves. In this case: remove the /api by rewriting the target.
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3050
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
